refactor : changed api

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>write braille</title>
+    <title>Speak Pirate</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     
     <nav class="navigation container">
-        <div class="nav-brand">write braille</div>
+        <div class="nav-brand">pirate</div>
       </nav>
 
       <textarea id="txt-input" class="text-box container-center"></textarea>
@@ -21,7 +21,7 @@
       <textarea id="txt-output" class="text-box container-center"></textarea>
 
       <footer class="footer">
-        <div class="footer-header">do you know braille is a language designed for blind people?use this translator and convey your message to them!!</div>
+        <div class="footer-header">Speak Like Pirate, Be a Pirate!!</div>
       </footer>
       <script src="app.js" type="text/javascript"></script>
 </body>
