refactor: changed error message

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="nav-brand">pirate</div>
       </nav>
 
-      <textarea id="txt-input" class="text-box container-center"></textarea>
+      <textarea id="txt-input" class="text-box container-center" placeholder="write your english sentence here!!"></textarea>
 
       <div class="center">
         <button id="btn-translate" class="btn-primary">Translate</button>
       </div>
 
-      <textarea id="txt-output" class="text-box container-center"></textarea>
+      <textarea id="txt-output" class="text-box container-center" placeholder="translated text will be shown here"></textarea>
 
       <footer class="footer">
         <div class="footer-header">Speak Like Pirate, Be a Pirate!!</div>
